<resources>
    <string name="app_name">Info</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="user">user</string>
    <string name="system">System</string>
    <string name="app_information">App Information</string>
    <string name="storage">Storage</string>
    <string name="directories">Directories</string>
    <string name="not_found">N/A</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="auto">Auto</string>
    <string name="internal">Internal</string>
    <string name="external_preferred">External Preferred</string>
    <string name="multi">Multi Dex ,%1$s</string>
    <string name="single">Single Dex,%1$s</string>
    <string name="apk_base_package">APK(Base Package)</string>
    <string name="split_packages">Split Packages</string>
    <string name="cache">Cache</string>
    <string name="data">Data</string>
    <string name="usage">Usage</string>
    <string name="signAlgorithm">Sign Algorithm</string>
    <string name="signAlgorithmOID">Sign Algorithm OID</string>
    <string name="certBase64Md5">Certificate Base64Md5</string>
    <string name="certMd5">Certificate Md5</string>
    <string name="start_date">Start Date</string>
    <string name="end_date">End date</string>
    <string name="exported">Exported</string>
    <string name="not_exported">Not Exported</string>
    <string name="public_text">Public</string>
    <string name="private_text">Private</string>
    <string name="protected_text">Protected</string>
    <string name="static_text">Static</string>
    <string name="interface_text">Interface</string>
    <string name="enum_text">Enum</string>
    <string name="annotation_text">Annotation</string>
    <string name="installer">Installer</string>
    <string name="verifier">Verifier</string>
    <string name="pre_installed">Pre Installed</string>
    <string name="setup">Setup</string>
    <string name="instant">Instant</string>
    <string name="runtime">Runtime</string>
    <string name="oem">OEM</string>
    <string name="vendor_privileged">Vendor Privileged</string>
    <string name="text_classifier">Text Classifier</string>
    <string name="wellbeing">Wellbeing</string>
    <string name="documenter">Documenter</string>
    <string name="configurator">Configurator</string>
    <string name="incident_report_approver">Incident Report Approver</string>
    <string name="app_predictor">App Predictor</string>
    <string name="retail_demo">Retail Demo</string>
    <string name="dangerous">Dangerous</string>
    <string name="normal">Normal</string>
    <string name="signature">Signature</string>
    <string name="signature_or_system">Signature or System</string>
    <string name="privileged">Privileged</string>
    <string name="development">Development</string>
    <string name="perm_desc">Description not available</string>
    <string name="provider_status">%1$s | %2$s</string>
    <string name="required">Required</string>
    <string name="not_required">Not required</string>
    <string name="device">Device</string>
    <string name="os_version">OS Version</string>
    <string name="security_update">Security Update</string>
    <string name="root">Root</string>
    <string name="total_available">Total Available</string>
    <string name="total_used">Total Used</string>
    <string name="apps">Apps</string>
    <string name="user_apps">User Apps</string>
    <string name="system_apps">System Apps</string>
    <string name="sensors">Sensors</string>
    <string name="ram">RAM</string>
    <string name="search_by_app_name_or_package">search by app name or package</string>
    <string name="activities">Activities</string>
    <string name="certificate">Certificate</string>
    <string name="dex_classes">Dex Classes</string>
    <string name="extras">Extras</string>
    <string name="manifest_file">Manifest File</string>
    <string name="permissions">Permissions</string>
    <string name="providers">Providers</string>
    <string name="resources_text">Resources</string>
    <string name="receiver_text">Receivers</string>
    <string name="services">Services</string>
    <string name="uses_features">Uses Features</string>
    <string name="search_app">search app</string>
    <string name="recently_installed">Recently Installed</string>
    <string name="recently_updated">Recently Updated</string>
</resources>