<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.fragments.Storage">
    <com.fh.info.decor.padding.PaddingAwareConstraintLayout
        android:padding="24dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            app:srcCompat="@drawable/ic_baseline_arrow_back_24"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:id="@+id/navigate_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_marginStart="20dp"
            android:text="@string/storage"
            app:layout_constraintStart_toEndOf="@id/navigate_back"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/primaryTextColor"
            android:textSize="20sp"
            android:textStyle="bold" />
        <TextView
            android:id="@+id/apk_title"
            android:layout_marginTop="50dp"
            app:layout_constraintTop_toBottomOf="@id/navigate_back"
            android:layout_marginStart="20dp"
            android:text="@string/apk_base_package"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/primaryTextColor"
            android:textSize="18sp"
            android:textStyle="bold" />
        <TextView
            android:id="@+id/apk"
            android:layout_marginTop="10dp"
            app:layout_constraintTop_toBottomOf="@id/apk_title"
            android:layout_marginStart="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/primaryTextColor"
            android:textSize="14sp"/>
        <TextView
            android:id="@+id/split_title"
            android:layout_marginTop="50dp"
            app:layout_constraintTop_toBottomOf="@id/apk"
            android:layout_marginStart="20dp"
            android:text="@string/split_packages"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/primaryTextColor"
            android:textSize="18sp"
            android:textStyle="bold" />
        <TextView
            android:id="@+id/split_package"
            android:layout_marginTop="10dp"
            app:layout_constraintTop_toBottomOf="@id/split_title"
            android:layout_marginStart="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/primaryTextColor"
            android:textSize="14sp"/>
        <TextView
            android:id="@+id/cache_title"
            android:layout_marginTop="50dp"
            app:layout_constraintTop_toBottomOf="@id/split_package"
            android:layout_marginStart="20dp"
            android:text="@string/cache"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/primaryTextColor"
            android:textSize="18sp"
            android:textStyle="bold" />
        <TextView
            android:id="@+id/cache"
            android:layout_marginTop="10dp"
            app:layout_constraintTop_toBottomOf="@id/cache_title"
            android:layout_marginStart="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/primaryTextColor"
            android:textSize="14sp"/>
        <TextView
            android:id="@+id/data_title"
            android:layout_marginTop="50dp"
            app:layout_constraintTop_toBottomOf="@id/cache"
            android:layout_marginStart="20dp"
            android:text="@string/data"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/primaryTextColor"
            android:textSize="18sp"
            android:textStyle="bold" />
        <TextView
            android:id="@+id/data"
            android:layout_marginTop="10dp"
            app:layout_constraintTop_toBottomOf="@id/data_title"
            android:layout_marginStart="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/primaryTextColor"
            android:textSize="14sp"/>
        <TextView
            android:id="@+id/usage"
            android:layout_marginTop="50dp"
            app:layout_constraintTop_toBottomOf="@id/data"
            android:layout_marginStart="20dp"
            android:text="@string/usage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/primaryTextColor"
            android:textSize="18sp"
            android:textStyle="bold" />


    </com.fh.info.decor.padding.PaddingAwareConstraintLayout>



</androidx.core.widget.NestedScrollView>