<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".ui.fragments.Home">

    <com.fh.info.decor.padding.PaddingAwareConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp">

        <TextView
            android:id="@+id/app_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/lato"
            android:text="@string/app_name"
            android:textColor="@color/primaryTextColor"
            android:textSize="26sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <View
            android:id="@+id/view_one"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="50dp"
            android:background="@color/viewBackColor"
            app:layout_constraintTop_toBottomOf="@id/app_name" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/options_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@id/view_one" />

        <TextView
            android:id="@+id/recent_installed_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:fontFamily="@font/lato"
            android:text="@string/recently_installed"
            android:textColor="@color/primaryTextColor"
            android:textSize="26sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/options_recycler_view" />

        <com.fh.info.decor.view.CustomHorizontalRecyclerView
            android:id="@+id/recently_installed_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            app:layout_constraintTop_toBottomOf="@id/recent_installed_text" />

        <TextView
            android:id="@+id/recent_updated_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:fontFamily="@font/lato"
            android:text="@string/recently_updated"
            android:textColor="@color/primaryTextColor"
            android:textSize="26sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/recently_installed_recycler_view" />

        <com.fh.info.decor.view.CustomHorizontalRecyclerView
            android:id="@+id/recently_updated_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            app:layout_constraintTop_toBottomOf="@id/recent_updated_text" />


    </com.fh.info.decor.padding.PaddingAwareConstraintLayout>
</androidx.core.widget.NestedScrollView>