<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragments.AppInfo">

    <com.fh.info.decor.padding.PaddingAwareConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="24dp">

        <ImageView
            android:paddingStart="10dp"
            android:id="@+id/app_icon"
            android:layout_width="75dp"
            android:layout_height="75dp" />

        <TextView
            android:id="@+id/app_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:textColor="@color/primaryTextColor"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@id/app_icon" />

        <TextView
            android:id="@+id/app_version_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="15dp"
            android:textColor="@color/primaryTextColor"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@id/app_icon"
            app:layout_constraintTop_toBottomOf="@id/app_name" />

        <com.fh.info.decor.view.RippleTextView
            android:paddingStart="10dp"
            android:id="@+id/app_information"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center_vertical"
            android:layout_marginTop="30dp"
            android:text="@string/app_information"
            android:textColor="@color/primaryTextColor"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@id/app_icon" />

        <com.fh.info.decor.view.RippleTextView
            android:paddingStart="10dp"
            android:layout_marginTop="15dp"
            android:id="@+id/storage"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/storage"
            android:gravity="center_vertical"
            android:textColor="@color/primaryTextColor"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@id/app_information" />

        <com.fh.info.decor.view.RippleTextView
            android:paddingStart="10dp"
            android:gravity="center_vertical"
            android:id="@+id/directories"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="15dp"
            android:text="@string/directories"
            android:textColor="@color/primaryTextColor"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@id/storage" />

        <androidx.recyclerview.widget.RecyclerView
            android:layoutAnimation="@anim/list_animation_controller"
            android:id="@+id/app_options_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            app:layout_constraintTop_toBottomOf="@id/directories" />

        <View
            android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@id/app_options_recycler_view"
            android:id="@+id/view_two"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/viewBackColor" />

        <androidx.recyclerview.widget.RecyclerView
            android:layoutAnimation="@anim/list_animation_controller"
            android:id="@+id/info_item_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            app:layout_constraintTop_toBottomOf="@id/view_two" />
    </com.fh.info.decor.padding.PaddingAwareConstraintLayout>


</androidx.core.widget.NestedScrollView>